# argon-dashboard-django

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/authentication/: config.py  views.py
apps/home/: config.py  views.py
core/settings/: __init__.py  base.py  production.py
